packages/kubernetes-manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: khannom-kubernetes-cluster
    http:
      paths:
      - path: /submit_code
        pathType: Exact
        backend:
          service:
            name: replit-clone-svc
            port:
              number: 80
